--- a/MyTradeMTG/Views/Shared/_UserLayout.cshtml
+++ b/MyTradeMTG/Views/Shared/_UserLayout.cshtml
@@ -361,7 +361,7 @@
                             @*}
                                 }*@
                             <li><a href="/user/TopUpList"> Topup List </a></li>
-                            <li><a href="/User/PayoutRequest">Withdraw</a></li>
+                            <li><a href="/User/PayoutRequest">Withdrawal</a></li>
                             @*}
                                     else
                                     {
