--- a/MyTradeMTG/Views/User/BankDetailsUpdate.cshtml
+++ b/MyTradeMTG/Views/User/BankDetailsUpdate.cshtml
@@ -52,6 +52,9 @@
                                                 <option value="VoterCardId">Voter Card Id</option>
                                                 <option value="PassPortCardId">PassPort Card Id</option>
                                                 <option value="RashanCardId">Rashan Card Id</option>
+                                                <option value="PanCardNo">Pan Card No</option>
+                                                <option value="AdharCardNo">Adhar Card No</option>
+                                                <option value="GasPassbookNo">Gas Passbook No</option>
                                             </select>
                                         }
                                         else
@@ -61,6 +64,9 @@
                                                 <option value="VoterCardId">Voter Card Id</option>
                                                 <option value="PassPortCardId">PassPort Card Id</option>
                                                 <option value="RashanCardId">Rashan Card Id</option>
+                                                <option value="PanCardNo">Pan Card No</option>
+                                                <option value="AdharCardNo">Adhar Card No</option>
+                                                <option value="GasPassbookNo">Gas Passbook No</option>
                                             </select>
                                         }
                                     </div>
