--- a/MyTradeMTG/Views/User/PayoutRequest.cshtml
+++ b/MyTradeMTG/Views/User/PayoutRequest.cshtml
@@ -19,7 +19,7 @@
                         <div class="card-header">
                             <div class="row">
                                 <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                                    <h4>Withdraw</h4>
+                                    <h4>Withdrawal</h4>
                                     <span class="text-danger">
                                         @TempData["msg"]
                                     </span>
