--- a/MyTradeMTG/Views/User/TopUp.cshtml
+++ b/MyTradeMTG/Views/User/TopUp.cshtml
@@ -94,7 +94,7 @@
                                 <div class="col-md-4">
                                     <label for="TotalAmount">Total<span style="color:red">*</span></label>
                                     @*<input name="TotalAmount" id="TotalAmount" value="" readonly class="form-control">*@
-                        <input name="TotalAmount" value="" id="TotalAmount"  class="form-control" >  
+                        <input name="TotalAmount" value="" readonly id="TotalAmount"  class="form-control" >  
                                 </div>
                             </div>
 
