--- a/MyTradeMTG/Views/Master/PackageList.cshtml
+++ b/MyTradeMTG/Views/Master/PackageList.cshtml
@@ -68,9 +68,9 @@
                                             <th>Direct Count 1</th>
                                             <th>Direct Count 2</th>
                                             <th>Direct Count 3</th>
-                                            <th>Return Percent 1</th>
+                                            @*<th>Return Percent 1</th>
                                             <th>Return Percent 2</th>
-                                            <th>Return Percent 3</th>
+                                            <th>Return Percent 3</th>*@
 
 
                                             <th>Package 1</th>
@@ -83,9 +83,9 @@
                                             <th style="display:none">Direct Count 1</th>
                                             <th style="display:none">Direct Count 2</th>
                                             <th style="display:none">Direct Count 3</th>
-                                            <th style="display:none">Return Percent 1</th>
+                                            @*<th style="display:none">Return Percent 1</th>
                                             <th style="display:none">Return Percent 2</th>
-                                            <th style="display:none">Return Percent 3</th>
+                                            <th style="display:none">Return Percent 3</th>*@
 
                                             <th style="display:none">Package 1</th>
                                             <th style="display:none">Package 2</th>
@@ -99,9 +99,9 @@
                                             <th>Direct Count 1</th>
                                             <th>Direct Count 2</th>
                                             <th>Direct Count 3</th>
-                                            <th>Return Percent 1</th>
+                                            @*<th>Return Percent 1</th>
                                             <th>Return Percent 2</th>
-                                            <th>Return Percent 3</th>
+                                            <th>Return Percent 3</th>*@
 
 
                                             <th>Package 1</th>
@@ -147,9 +147,9 @@
                                                         <td>@Item.DrAmount1</td>
                                                         <td>@Item.DrAmount2</td>
                                                         <td>@Item.DrAmount3</td>
-                                                        <td>@Item.ReturnPercent1</td>
+                                                        @*<td>@Item.ReturnPercent1</td>
                                                         <td>@Item.ReturnPercent2</td>
-                                                        <td>@Item.ReturnPercent3</td>
+                                                        <td>@Item.ReturnPercent3</td>*@
 
 
                                                         <td>@Item.Package1</td>
@@ -163,9 +163,9 @@
                                                         <td style="display:none">@Item.DrAmount1</td>
                                                         <td style="display:none">@Item.DrAmount2</td>
                                                         <td style="display:none">@Item.DrAmount3</td>
-                                                        <td style="display:none">@Item.ReturnPercent1</td>
+                                                        @*<td style="display:none">@Item.ReturnPercent1</td>
                                                         <td style="display:none">@Item.ReturnPercent2</td>
-                                                        <td style="display:none">@Item.ReturnPercent3</td>
+                                                        <td style="display:none">@Item.ReturnPercent3</td>*@
 
 
 
@@ -179,9 +179,9 @@
                                                         <td>@Item.DrAmount1</td>
                                                         <td>@Item.DrAmount2</td>
                                                         <td>@Item.DrAmount3</td>
-                                                        <td>@Item.ReturnPercent1</td>
+                                                        @*<td>@Item.ReturnPercent1</td>
                                                         <td>@Item.ReturnPercent2</td>
-                                                        <td>@Item.ReturnPercent3</td>
+                                                        <td>@Item.ReturnPercent3</td>*@
 
 
                                                         <td>@Item.Package1</td>
