--- a/MyTradeMTG/Views/User/PayoutRequest.cshtml
+++ b/MyTradeMTG/Views/User/PayoutRequest.cshtml
@@ -106,13 +106,13 @@
                                 </div>
                                 <div class="col-lg-6 col-md-6" style="margin-top:28px">
                                     <div class="form-group">
-                                        <h6 style="color:red">MTG Transfer Charge:  <label id="perAmt" style="color:red;">0</label></h6>
+                                        <h6 style="color:red">Processing Charge:  <label id="perAmt" style="color:red;">0</label></h6>
                                         <input type="hidden" id="percentAmt" name="percentAmt" />
 
-                                        <h6 style="color:red">Transfer Charge In Rupees: <label id="Ind" style="color:red;">0</label></h6>
+                                        @*<h6 style="color:red">Transfer Charge In Rupees: <label id="Ind" style="color:red;">0</label></h6>
                                         <input type="hidden" id="IndRupees" name="IndRupees" />
 
-                                        <h6 style="color:red">Gross MTG:  <label id="lbld" style="color:red;">0</label></h6>
+                                        <h6 style="color:red">Gross MTG:  <label id="lbld" style="color:red;">0</label></h6>*@
                                         <h6 style="color:green">
                                             @*Gross MTG /USDT to be deducted:*@  
                                             Gross MTG In Rupees:
@@ -131,8 +131,8 @@
                                                 <th>Name</th>*@
                                             <th>Gross MTG /USDT</th>
                                             <th>Procesing Charges</th>
-                                            <th>MTG /USDT</th>
-                                            <th>Net MTG /USDT</th>
+                                            @*<th>MTG /USDT</th>*@
+                                            <th>Net INR /USDT</th>
                                             <th>Date</th>
                                             <th>IFSC Code</th>
                                             <th>Account No</th>
@@ -156,7 +156,7 @@
                                                             <td>@Item.Name</td>*@
                                                         <td>@Item.GrossAmount</td>
                                                         <td>@Item.ProcessingFee</td>
-                                                        <td>@Item.TDSAmount</td>
+                                                        @*<td>@Item.TDSAmount</td>*@
                                                         <td>@Item.Amount</td>
                                                         <td>@Item.Date</td>
                                                         <td>@Item.IFSCCode</td>
@@ -270,7 +270,7 @@
             $("#Ind").text(parseFloat(totalRupee));
             GetFinalAmount();
 
-            var grossAmt = totalRupee + mtgAmt;
+            var grossAmt = totalRupee + total;
             $("#lblf").text(parseFloat(grossAmt));
 
         });
@@ -300,7 +300,7 @@
     function Validate() {
         debugger;
         document.getElementById("percentAmt").value = document.getElementById("perAmt").innerHTML;
-        document.getElementById("IndRupees").value = document.getElementById("Ind").innerHTML;
+        //document.getElementById("IndRupees").value = document.getElementById("Ind").innerHTML;
 
         $(".errortext").removeClass("errortext");
         if ($('#Amount').val() == '0') {
@@ -368,7 +368,7 @@
 
 
         var mtgAmt = parseFloat($("#Amount").val()) * 0.10;
-        $("#perAmt").text(parseFloat(mtgAmt));
+        $("#perAmt").text(parseFloat(mtgAmt) + '$');
 
 
         var indrupees = parseFloat($("#IndianValue").val());
