--- a/MyTradeMTG/Views/User/PayoutRequest.cshtml
+++ b/MyTradeMTG/Views/User/PayoutRequest.cshtml
@@ -138,6 +138,15 @@
                                             <th>Account No</th>
                                             <th>Status</th>
                                             @*<th>ROI Percentage</th>*@
+
+                                            @*<th>Sr No.</th>
+                                            <th>Date</th>
+                                            <th>Withdrawl(MTG)</th>
+                                            <th>Processing Charge(MTG)</th>
+                                            <th>Withdrawl(Rupees)</th>
+                                            <th></th>
+                                            <th></th>*@
+
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -368,7 +377,7 @@
 
 
         var mtgAmt = parseFloat($("#Amount").val()) * 0.10;
-        $("#perAmt").text(parseFloat(mtgAmt) + '$');
+        $("#perAmt").text(parseFloat(mtgAmt) + "$");
 
 
         var indrupees = parseFloat($("#IndianValue").val());
