--- a/MyTradeMTG/plugins/sweetalerts/sweetalert.css
+++ b/MyTradeMTG/plugins/sweetalerts/sweetalert.css
@@ -954,3 +954,9 @@ body.swal2-iosfix {
         padding: 5em 4em!important;
     }
 }
+
+
+ .swal2-success-circular-line-left,.swal2-success-circular-line-right,.swal2-success-fix
+        {
+            background:rgb(20, 17, 46) !important;
+        }
